<resources>
	<string name="app_name">iPhone X/XS/11 Pro  1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="se_connecter_string">Se connecter</string>
	<string name="mpako_string">Mpako</string>
	<string name="rl_string">RL</string>
	<string name="mpakorl_est_une_application_mobile_android_mis_en_place_pour_mettre_en_relation_les_clients__locataire_et_bailleur__et_le_bureau_de_la_drhkat__string">MpakoRL est une application mobile Android mis en placepour mettre en relation les clients (locataire et bailleur)et le bureau de la DRHKAT.</string>
	<string name="mpako_ek1_string">Mpako</string>
	<string name="home_string">Home</string>
	<string name="mpakorl__version_1_0_string">MpakoRL  version 1.0</string>
	<string name="login_string">Login</string>
	<string name="_connexion_string">Connexion</string>
	<string name="your_email__string">Your Email:</string>
	<string name="your_email__ek1_string">Your Email:</string>
	<string name="password__string">Password:</string>
	<string name="mpakorl__version_1_0_ek1_string">MpakoRL  version 1.0</string>
	<string name="saisir_votre_email_ici_string">Saisir votre Email ici</string>
	<string name="saisir_votre_mot_de_passe_ici_string">Saisir votre mot de passe ici</string>
	<string name="nom_client_string">Nom client</string>
	<string name="_voir_profil_string">Voir profil</string>
	<string name="notifications_string">Notifications</string>
	<string name="mpakorl__version_1_0_ek2_string">MpakoRL  version 1.0</string>
	<string name="lundi_01_janvier_2021_10_00_string">Lundi 01/Janvier/2021 10:00</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="mardi_03_f_vrier_2021_11_10_string">Mardi 03/Fvrier/2021 11:10</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek1_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="vendredi_13_mars_2021_09_23_string">Vendredi 13/Mars/2021 09:23</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek2_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="mercredi_02_avril_2021_14_15_string">Mercredi 02/Avril/2021 14:15</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek3_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="samedi_16_mai_2021_11_07_string">Samedi 16/Mai/2021 11:07</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek4_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="lundi_04_juin_2021_11_08_string">Lundi 04/Juin/2021 11:08</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek5_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="compte_client_string">Compte client</string>
	<string name="voir_profil_ek1_string">Voir profil</string>
	<string name="notifications_ek1_string">Notifications</string>
	<string name="mpakorl__version_1_0_ek3_string">MpakoRL  version 1.0</string>
	<string name="lundi_01_janvier_2021_10_00_ek1_string">Lundi 01/Janvier/2021 10:00</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek6_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="mardi_03_f_vrier_2021_11_10_ek1_string">Mardi 03/Fvrier/2021 11:10</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek7_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="vendredi_13_mars_2021_09_23_ek1_string">Vendredi 13/Mars/2021 09:23</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek8_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="mercredi_02_avril_2021_14_15_ek1_string">Mercredi 02/Avril/2021 14:15</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek9_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="samedi_16_mai_2021_11_07_ek1_string">Samedi 16/Mai/2021 11:07</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek10_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="lundi_04_juin_2021_11_08_ek1_string">Lundi 04/Juin/2021 11:08</string>
	<string name="cher_client__votre_versement_de_40_000__pour_le_mois_de_javier_2021_dans_la_banque_centrale_du_congo_bcdc___bien__t__effectu____la_direction_centrale_de_la_drhkat_ek11_string">Cher client, votre versement de 40 000$ pour le mois de Javier 2021dans la banque centrale du Congo BCDC  bien t effectu. La direction centrale de la DRHKAT</string>
	<string name="nom_client_ek1_string">Nom client</string>
	<string name="d_tails_string">Dtails</string>
	<string name="client_string">Client</string>
	<string name="b_timent_3_niveau_string">Btiment 3 niveau</string>
	<string name="__243_82_066_42_27_string">+243 82 066 42 27</string>
	<string name="nomclient_gmail_com_string">nomclient@gmail.com</string>
	<string name="l_shi_industriel_luvungui__n_270_string">Lshi,Industriel,Luvungui, N270</string>
	<string name="profil_string">Profil</string>
	<string name="nom_agent_string">Nom agent</string>
	<string name="_voir_profil_ek2_string">Voir profil</string>
	<string name="tableau_des_clients_en_ordre_string">Tableau des clients en ordre</string>
	<string name="mpakorl__version_1_0_ek4_string">MpakoRL  version 1.0</string>
	<string name="compte_drhkat_string">Compte DRHKAT</string>
	<string name="n__string">N</string>
	<string name="noms_client_string">Noms client</string>
	<string name="type_paiement_string">Type paiement</string>
	<string name="montant_en___string">Montant en $</string>
	<string name="notification_string">Notification</string>
	<string name="envoyer_string">Envoyer</string>
	<string name="_envoyer_ek1_string">Envoyer</string>
	<string name="_envoyer_ek2_string">Envoyer</string>
	<string name="_envoyer_ek3_string">Envoyer</string>
	<string name="_envoyer_ek4_string">Envoyer</string>
	<string name="_envoyer_ek5_string">Envoyer</string>
	<string name="_envoyer_ek6_string">Envoyer</string>
	<string name="envoyer_ek7_string">Envoyer</string>
	<string name="envoyer_ek8_string">Envoyer</string>
	<string name="envoyer_ek9_string">Envoyer</string>
	<string name="_envoyer_ek10_string">Envoyer</string>
	<string name="_01_string">01</string>
	<string name="julie_kabeya_string">Julie Kabeya</string>
	<string name="mensuel_string">Mensuel</string>
	<string name="_500_string">500</string>
	<string name="_02_string">02</string>
	<string name="c_drick_okonda_string">Cdrick Okonda</string>
	<string name="trimestriel_string">Trimestriel</string>
	<string name="_1500_string">1500</string>
	<string name="_03_string">03</string>
	<string name="patrick_mukala_string">Patrick Mukala</string>
	<string name="annuel_string">Annuel</string>
	<string name="_4500_string">4500</string>
	<string name="_04_string">04</string>
	<string name="guellord_mbiya_string">Guellord Mbiya</string>
	<string name="mensuel_ek1_string">Mensuel</string>
	<string name="_250_string">250</string>
	<string name="_05_string">05</string>
	<string name="luc_marc_string">Luc-Marc</string>
	<string name="mensuel_ek2_string">Mensuel</string>
	<string name="_200_string">200</string>
	<string name="_06_string">06</string>
	<string name="arlette_danga_string">Arlette Danga</string>
	<string name="mensuel_ek3_string">Mensuel</string>
	<string name="_150_string">150</string>
	<string name="_07_string">07</string>
	<string name="_08_string">08</string>
	<string name="_09_string">09</string>
	<string name="_10_string">10</string>
	<string name="_11_string">11</string>
	<string name="seth_kasongo_string">Seth Kasongo</string>
	<string name="dorcas_matangi_string">Dorcas Matangi</string>
	<string name="consistance_string">Consistance</string>
	<string name="bienfait__string">Bienfait </string>
	<string name="emmanuel_string">Emmanuel</string>
	<string name="trimestriel_ek1_string">Trimestriel</string>
	<string name="trimestriel_ek2_string">Trimestriel</string>
	<string name="annuel_ek1_string">Annuel</string>
	<string name="mensuel_ek4_string">Mensuel</string>
	<string name="mensuel_ek5_string">Mensuel</string>
	<string name="_1000_string">1000</string>
	<string name="_300_string">300</string>
	<string name="_700_string">700</string>
	<string name="_200_ek1_string">200</string>
	<string name="_2000_string">2000</string>
	<string name="nom_agent_ek1_string">Nom agent</string>
	<string name="voir_profil_ek3_string">Voir profil</string>
	<string name="tableau_des_clients_en_ordre_ek1_string">Tableau des clients en ordre</string>
	<string name="mpakorl__version_1_0_ek5_string">MpakoRL  version 1.0</string>
	<string name="compte_drhkat_ek1_string">Compte DRHKAT</string>
	<string name="n__ek1_string">N</string>
	<string name="noms_client_ek1_string">Noms client</string>
	<string name="type_paiement_ek1_string">Type paiement</string>
	<string name="montant_en___ek1_string">Montant en $</string>
	<string name="notification_ek1_string">Notification</string>
	<string name="envoyer_ek11_string">Envoyer</string>
	<string name="envoyer_ek12_string">Envoyer</string>
	<string name="envoyer_ek13_string">Envoyer</string>
	<string name="envoyer_ek14_string">Envoyer</string>
	<string name="envoyer_ek15_string">Envoyer</string>
	<string name="envoyer_ek16_string">Envoyer</string>
	<string name="envoyer_ek17_string">Envoyer</string>
	<string name="envoyer_ek18_string">Envoyer</string>
</resources>